# Mini-DBMS-System

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/: Column.h  Database.cpp  Database.h  Parser.cpp  Parser.h  Row.h  Table.cpp  Table.h  Utils.cpp  Utils.h
core/data/school/: students.json
